--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,7 +36,18 @@
         let localStream;
         let remoteStream;
         let peerConnection;
-        const servers = { iceServers: [{ urls: "stun:stun.l.google.com:19302" }] };
+
+        const servers = {
+            iceServers: [
+                { urls: "stun:stun.l.google.com:19302" },  // Public STUN server
+                { 
+                    urls: "turn:relay1.expressturn.com:3478", 
+                    username: "ef5d3c58", 
+                    credential: "5zCz2LhY"
+                }
+            ]
+        };
+
         const callDoc = db.collection("calls").doc("testCall");
         const offerCandidates = callDoc.collection("offerCandidates");
         const answerCandidates = callDoc.collection("answerCandidates");
@@ -53,6 +63,7 @@
         }
 
         async function startCall() {
+            console.log("🔵 Starting call...");
             await setupMedia();
             peerConnection = new RTCPeerConnection(servers);
 
@@ -64,17 +75,22 @@
 
             peerConnection.onicecandidate = event => {
                 if (event.candidate) {
+                    console.log("📡 Sending ICE Candidate:", event.candidate);
                     offerCandidates.add(event.candidate.toJSON());
                 }
             };
 
             const offer = await peerConnection.createOffer();
             await peerConnection.setLocalDescription(offer);
+            console.log("✅ Offer Created:", offer);
+
             await callDoc.set({ offer });
+            console.log("✅ Offer stored in Firebase");
 
             callDoc.onSnapshot(snapshot => {
                 const data = snapshot.data();
                 if (data?.answer) {
+                    console.log("✅ Answer received:", data.answer);
                     peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
                 }
             });
@@ -82,6 +98,7 @@
             answerCandidates.onSnapshot(snapshot => {
                 snapshot.docChanges().forEach(change => {
                     if (change.type === "added") {
+                        console.log("✅ Received Answer ICE Candidate:", change.doc.data());
                         const candidate = new RTCIceCandidate(change.doc.data());
                         peerConnection.addIceCandidate(candidate);
                     }
@@ -90,6 +107,7 @@
         }
 
         async function answerCall() {
+            console.log("🟢 Answering call...");
             await setupMedia();
             peerConnection = new RTCPeerConnection(servers);
 
@@ -101,20 +119,27 @@
 
             peerConnection.onicecandidate = event => {
                 if (event.candidate) {
+                    console.log("📡 Sending Answer ICE Candidate:", event.candidate);
                     answerCandidates.add(event.candidate.toJSON());
                 }
             };
 
             const callData = (await callDoc.get()).data();
+            console.log("📥 Offer received:", callData.offer);
+
             await peerConnection.setRemoteDescription(new RTCSessionDescription(callData.offer));
 
             const answer = await peerConnection.createAnswer();
             await peerConnection.setLocalDescription(answer);
+            console.log("✅ Answer Created:", answer);
+
             await callDoc.update({ answer });
+            console.log("✅ Answer stored in Firebase");
 
             offerCandidates.onSnapshot(snapshot => {
                 snapshot.docChanges().forEach(change => {
                     if (change.type === "added") {
+                        console.log("✅ Received Offer ICE Candidate:", change.doc.data());
                         const candidate = new RTCIceCandidate(change.doc.data());
                         peerConnection.addIceCandidate(candidate);
                     }
@@ -126,31 +151,5 @@
         document.getElementById("answerCall").addEventListener("click", answerCall);
     </script>
 
-
-
-
-
-
-<!-- // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBY3CZVj6GdgNjYuWGi15yd6YnGGy4C-TU",
-  authDomain: "webrtc-videocall-892bc.firebaseapp.com",
-  projectId: "webrtc-videocall-892bc",
-  storageBucket: "webrtc-videocall-892bc.firebasestorage.app",
-  messagingSenderId: "722974378490",
-  appId: "1:722974378490:web:760e98754fe302d406fc43",
-  measurementId: "G-K7BKWQDJK4"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app); -->
 </body>
 </html>
