--- a/index.html
+++ b/index.html
@@ -5,9 +5,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebRTC Video Call (No Node.js)</title>
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+    <!-- ✅ Correct Firebase SDK for browser -->
+    <script type="module">
+        // Import Firebase v9+ correctly
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getFirestore, collection, doc, setDoc, getDoc, onSnapshot, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+        // 🔥 Firebase Config (Replace with your own)
+        const firebaseConfig = {
+            apiKey: "AIzaSyBY3CZVj6GdgNjYuWGi15yd6YnGGy4C-TU",
+            authDomain: "webrtc-videocall-892bc.firebaseapp.com",
+            projectId: "webrtc-videocall-892bc",
+            storageBucket: "webrtc-videocall-892bc.firebasestorage.app",
+            messagingSenderId: "722974378490",
+            appId: "1:722974378490:web:760e98754fe302d406fc43"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        let localStream;
+        let remoteStream;
+        let peerConnection;
+        const servers = { iceServers: [{ urls: "stun:stun.l.google.com:19302" }] };
+
+        const callDoc = doc(db, "calls", "testCall");
+        const offerCandidates = collection(callDoc, "offerCandidates");
+        const answerCandidates = collection(callDoc, "answerCandidates");
+
+        document.addEventListener("DOMContentLoaded", async () => {
+            const localVideo = document.getElementById("localVideo");
+            const remoteVideo = document.getElementById("remoteVideo");
+
+            async function setupMedia() {
+                localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+                remoteStream = new MediaStream();
+                localVideo.srcObject = localStream;
+                remoteVideo.srcObject = remoteStream;
+            }
+
+            async function startCall() {
+                await setupMedia();
+                peerConnection = new RTCPeerConnection(servers);
+
+                localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+
+                peerConnection.ontrack = event => {
+                    remoteStream = event.streams[0];
+                    remoteVideo.srcObject = remoteStream;
+                };
+
+                peerConnection.onicecandidate = async event => {
+                    if (event.candidate) {
+                        await addDoc(offerCandidates, event.candidate.toJSON());
+                    }
+                };
+
+                const offer = await peerConnection.createOffer();
+                await peerConnection.setLocalDescription(offer);
+                await setDoc(callDoc, { offer });
+
+                onSnapshot(callDoc, async snapshot => {
+                    const data = snapshot.data();
+                    if (data?.answer) {
+                        await peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
+                    }
+                });
+
+                onSnapshot(answerCandidates, async snapshot => {
+                    snapshot.docChanges().forEach(async change => {
+                        if (change.type === "added") {
+                            const candidate = new RTCIceCandidate(change.doc.data());
+                            await peerConnection.addIceCandidate(candidate);
+                        }
+                    });
+                });
+            }
+
+            async function answerCall() {
+                await setupMedia();
+                peerConnection = new RTCPeerConnection(servers);
+
+                localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+
+                peerConnection.ontrack = event => {
+                    remoteStream = event.streams[0];
+                    remoteVideo.srcObject = remoteStream;
+                };
+
+                peerConnection.onicecandidate = async event => {
+                    if (event.candidate) {
+                        await addDoc(answerCandidates, event.candidate.toJSON());
+                    }
+                };
+
+                const callData = (await getDoc(callDoc)).data();
+                await peerConnection.setRemoteDescription(new RTCSessionDescription(callData.offer));
+
+                const answer = await peerConnection.createAnswer();
+                await peerConnection.setLocalDescription(answer);
+                await setDoc(callDoc, { answer });
+
+                onSnapshot(offerCandidates, async snapshot => {
+                    snapshot.docChanges().forEach(async change => {
+                        if (change.type === "added") {
+                            const candidate = new RTCIceCandidate(change.doc.data());
+                            await peerConnection.addIceCandidate(candidate);
+                        }
+                    });
+                });
+            }
+
+            document.getElementById("startCall").addEventListener("click", startCall);
+            document.getElementById("answerCall").addEventListener("click", answerCall);
+        });
+    </script>
 
     <style>
         video { width: 45%; border: 2px solid black; margin: 10px; }
@@ -21,117 +134,6 @@
     <br>
     <video id="localVideo" autoplay playsinline></video>
     <video id="remoteVideo" autoplay playsinline></video>
-
-    <script>
-        // 🔥 Firebase Config (Replace with your own credentials)
-        const firebaseConfig = {
-            apiKey: "AIzaSyBY3CZVj6GdgNjYuWGi15yd6YnGGy4C-TU",
-            authDomain: "webrtc-videocall-892bc.firebaseapp.com",
-            projectId: "webrtc-videocall-892bc",
-            storageBucket: "webrtc-videocall-892bc.firebasestorage.app",
-            messagingSenderId: "722974378490",
-            appId: "1:722974378490:web:760e98754fe302d406fc43"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-
-        let localStream;
-        let remoteStream;
-        let peerConnection;
-        const servers = { iceServers: [{ urls: "stun:stun.l.google.com:19302" }] };
-
-        const callDoc = db.collection("calls").doc("testCall");
-        const offerCandidates = callDoc.collection("offerCandidates");
-        const answerCandidates = callDoc.collection("answerCandidates");
-
-        const localVideo = document.getElementById("localVideo");
-        const remoteVideo = document.getElementById("remoteVideo");
-
-        async function setupMedia() {
-            localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-            remoteStream = new MediaStream(); // Create new stream for remote video
-            localVideo.srcObject = localStream;
-            remoteVideo.srcObject = remoteStream; // Ensure remote video gets assigned
-        }
-
-        async function startCall() {
-            await setupMedia();
-            peerConnection = new RTCPeerConnection(servers);
-
-            localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
-
-            peerConnection.ontrack = event => {
-                console.log("📡 Remote track received", event.streams[0]);
-                remoteStream = event.streams[0]; // Fix: Assign received stream
-                remoteVideo.srcObject = remoteStream; // Fix: Ensure video updates
-            };
-
-            peerConnection.onicecandidate = event => {
-                if (event.candidate) {
-                    offerCandidates.add(event.candidate.toJSON());
-                }
-            };
-
-            const offer = await peerConnection.createOffer();
-            await peerConnection.setLocalDescription(offer);
-            await callDoc.set({ offer });
-
-            callDoc.onSnapshot(snapshot => {
-                const data = snapshot.data();
-                if (data?.answer) {
-                    peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
-                }
-            });
-
-            answerCandidates.onSnapshot(snapshot => {
-                snapshot.docChanges().forEach(change => {
-                    if (change.type === "added") {
-                        const candidate = new RTCIceCandidate(change.doc.data());
-                        peerConnection.addIceCandidate(candidate);
-                    }
-                });
-            });
-        }
-
-        async function answerCall() {
-            await setupMedia();
-            peerConnection = new RTCPeerConnection(servers);
-
-            localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
-
-            peerConnection.ontrack = event => {
-                console.log("📡 Remote track received", event.streams[0]);
-                remoteStream = event.streams[0]; // Fix: Assign received stream
-                remoteVideo.srcObject = remoteStream; // Fix: Ensure video updates
-            };
-
-            peerConnection.onicecandidate = event => {
-                if (event.candidate) {
-                    answerCandidates.add(event.candidate.toJSON());
-                }
-            };
-
-            const callData = (await callDoc.get()).data();
-            await peerConnection.setRemoteDescription(new RTCSessionDescription(callData.offer));
-
-            const answer = await peerConnection.createAnswer();
-            await peerConnection.setLocalDescription(answer);
-            await callDoc.update({ answer });
-
-            offerCandidates.onSnapshot(snapshot => {
-                snapshot.docChanges().forEach(change => {
-                    if (change.type === "added") {
-                        const candidate = new RTCIceCandidate(change.doc.data());
-                        peerConnection.addIceCandidate(candidate);
-                    }
-                });
-            });
-        }
-
-        document.getElementById("startCall").addEventListener("click", startCall);
-        document.getElementById("answerCall").addEventListener("click", answerCall);
-    </script>
 
 </body>
 </html>
