--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebRTC Video Call (No Node.js)</title>
-
-    <!-- ✅ Correct Firebase SDK for browser -->
     <script type="module">
-        // Import Firebase v9+ correctly
+        // ✅ Import Firebase Modules
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getFirestore, collection, doc, setDoc, getDoc, onSnapshot, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getFirestore, collection, doc, setDoc, getDoc, onSnapshot, updateDoc, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // 🔥 Firebase Config (Replace with your own)
+        // ✅ Firebase Configuration (Replace with your own)
         const firebaseConfig = {
-            apiKey: "AIzaSyBY3CZVj6GdgNjYuWGi15yd6YnGGy4C-TU",
+             apiKey: "AIzaSyBY3CZVj6GdgNjYuWGi15yd6YnGGy4C-TU",
             authDomain: "webrtc-videocall-892bc.firebaseapp.com",
             projectId: "webrtc-videocall-892bc",
             storageBucket: "webrtc-videocall-892bc.firebasestorage.app",
@@ -21,7 +19,7 @@
             appId: "1:722974378490:web:760e98754fe302d406fc43"
         };
 
-        // Initialize Firebase
+        // ✅ Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
@@ -34,94 +32,104 @@
         const offerCandidates = collection(callDoc, "offerCandidates");
         const answerCandidates = collection(callDoc, "answerCandidates");
 
-        document.addEventListener("DOMContentLoaded", async () => {
-            const localVideo = document.getElementById("localVideo");
-            const remoteVideo = document.getElementById("remoteVideo");
+        const localVideo = document.getElementById("localVideo");
+        const remoteVideo = document.getElementById("remoteVideo");
 
-            async function setupMedia() {
-                localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-                remoteStream = new MediaStream();
-                localVideo.srcObject = localStream;
-                remoteVideo.srcObject = remoteStream;
-            }
+        // ✅ Function to Get User Media
+        async function setupMedia() {
+            localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+            remoteStream = new MediaStream();
+            localVideo.srcObject = localStream;
+            remoteVideo.srcObject = remoteStream;
+        }
 
-            async function startCall() {
-                await setupMedia();
-                peerConnection = new RTCPeerConnection(servers);
+        // ✅ Function to Start a Call
+        async function startCall() {
+            await setupMedia();
+            peerConnection = new RTCPeerConnection(servers);
 
-                localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+            localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
 
-                peerConnection.ontrack = event => {
-                    remoteStream = event.streams[0];
-                    remoteVideo.srcObject = remoteStream;
-                };
+            peerConnection.ontrack = event => {
+                event.streams[0].getTracks().forEach(track => remoteStream.addTrack(track));
+            };
 
-                peerConnection.onicecandidate = async event => {
-                    if (event.candidate) {
-                        await addDoc(offerCandidates, event.candidate.toJSON());
-                    }
-                };
+            peerConnection.onicecandidate = async event => {
+                if (event.candidate) {
+                    await addDoc(offerCandidates, event.candidate.toJSON());
+                }
+            };
 
-                const offer = await peerConnection.createOffer();
-                await peerConnection.setLocalDescription(offer);
-                await setDoc(callDoc, { offer });
+            const offer = await peerConnection.createOffer();
+            await peerConnection.setLocalDescription(offer);
+            await setDoc(callDoc, { offer });
 
-                onSnapshot(callDoc, async snapshot => {
-                    const data = snapshot.data();
-                    if (data?.answer) {
-                        await peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
-                    }
-                });
+            onSnapshot(callDoc, snapshot => {
+                const data = snapshot.data();
+                if (data?.answer && !peerConnection.remoteDescription) {
+                    peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
+                }
+            });
 
-                onSnapshot(answerCandidates, async snapshot => {
-                    snapshot.docChanges().forEach(async change => {
-                        if (change.type === "added") {
-                            const candidate = new RTCIceCandidate(change.doc.data());
+            onSnapshot(answerCandidates, snapshot => {
+                snapshot.docChanges().forEach(async change => {
+                    if (change.type === "added") {
+                        const candidate = new RTCIceCandidate(change.doc.data());
+                        if (peerConnection.remoteDescription) {
                             await peerConnection.addIceCandidate(candidate);
+                        } else {
+                            setTimeout(async () => {
+                                await peerConnection.addIceCandidate(candidate);
+                            }, 1000);
                         }
-                    });
-                });
-            }
-
-            async function answerCall() {
-                await setupMedia();
-                peerConnection = new RTCPeerConnection(servers);
-
-                localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
-
-                peerConnection.ontrack = event => {
-                    remoteStream = event.streams[0];
-                    remoteVideo.srcObject = remoteStream;
-                };
-
-                peerConnection.onicecandidate = async event => {
-                    if (event.candidate) {
-                        await addDoc(answerCandidates, event.candidate.toJSON());
                     }
-                };
-
-                const callData = (await getDoc(callDoc)).data();
-                await peerConnection.setRemoteDescription(new RTCSessionDescription(callData.offer));
-
-                const answer = await peerConnection.createAnswer();
-                await peerConnection.setLocalDescription(answer);
-                await setDoc(callDoc, { answer });
-
-                onSnapshot(offerCandidates, async snapshot => {
-                    snapshot.docChanges().forEach(async change => {
-                        if (change.type === "added") {
-                            const candidate = new RTCIceCandidate(change.doc.data());
-                            await peerConnection.addIceCandidate(candidate);
-                        }
-                    });
                 });
-            }
+            });
+        }
 
-            document.getElementById("startCall").addEventListener("click", startCall);
-            document.getElementById("answerCall").addEventListener("click", answerCall);
-        });
+        // ✅ Function to Answer a Call
+        async function answerCall() {
+            await setupMedia();
+            peerConnection = new RTCPeerConnection(servers);
+
+            localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+
+            peerConnection.ontrack = event => {
+                event.streams[0].getTracks().forEach(track => remoteStream.addTrack(track));
+            };
+
+            peerConnection.onicecandidate = async event => {
+                if (event.candidate) {
+                    await addDoc(answerCandidates, event.candidate.toJSON());
+                }
+            };
+
+            const callData = (await getDoc(callDoc)).data();
+            await peerConnection.setRemoteDescription(new RTCSessionDescription(callData.offer));
+
+            const answer = await peerConnection.createAnswer();
+            await peerConnection.setLocalDescription(answer);
+            await updateDoc(callDoc, { answer });
+
+            onSnapshot(offerCandidates, snapshot => {
+                snapshot.docChanges().forEach(async change => {
+                    if (change.type === "added") {
+                        const candidate = new RTCIceCandidate(change.doc.data());
+                        if (peerConnection.remoteDescription) {
+                            await peerConnection.addIceCandidate(candidate);
+                        } else {
+                            setTimeout(async () => {
+                                await peerConnection.addIceCandidate(candidate);
+                            }, 1000);
+                        }
+                    }
+                });
+            });
+        }
+
+        document.getElementById("startCall").addEventListener("click", startCall);
+        document.getElementById("answerCall").addEventListener("click", answerCall);
     </script>
-
     <style>
         video { width: 45%; border: 2px solid black; margin: 10px; }
     </style>
